# SmartHomeSystem

./: .gitignore  Readme.md  build_kb.py  main.py  pyproject.toml  requirements.txt  test_agent.py  test_main.py  testollama.py  view_kb.py
Classifier/: __init__.py  feedbackEngine.py  intentRouter.py  ruleStore.py  simple_commands.py  task_classifier.py
Vectordb/: assicentVectorDb.py
Voice/audio/: recordAudio.py  whisperAsr.py
Voice/config/: settings.py
device/: baseDevice.py  deviceController.py  lightDevice.py  mockHa.py  sensorDevice.py  switchDevice.py
llm/: __init__.py  llmProxy.py
test/: llm_test.py  test_assicent_vector_db.py  test_mock_ha.py
tools/: __init__.py  add_knowledge_tool.py  homeassistant_tool.py  time_tool.py  weather_tool.py
