[project]
name = "SmareHomeAssisent"
version = "0.1.0"
description = "Your project description"
requires-python = ">=3.13" 
dependencies = [
    "flask",
    "requests",
    "langchain",
    "langchain-ollama",
    "langchain-chroma",
    "langchain-community>=0.4.1",
    "langgraph>=1.0.2",
    "langchain-core>=1.0.2",
    "langchain-openai>=1.0.1",
    "pyaudio>=0.2.14",
    "faster-whisper>=1.2.1",
    "chromadb>=1.3.0",
    "langchainhub>=0.1.21",
]


[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]
